--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZFkIyFjJvYfI3FncU3s1a",
+      "authorship_tag": "ABX9TyMtjYm/P2NsLGeS/WTmPVBR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,13 +51,20 @@
     {
       "cell_type": "code",
       "source": [
+        "import json\n",
+        "import os\n",
+        "from getpass import getpass\n",
         "import psutil\n",
-        "IN_NOTEBOOK = any([\"jupyter-notebook\" in i for i in psutil.Process().parent().cmdline()])"
+        "IN_NOTEBOOK = any([\"jupyter-notebook\" in i for i in psutil.Process().parent().cmdline()])\n",
+        "if IN_NOTEBOOK:\n",
+        "  CREDS = json.loads(getpass(\"Secrets (JSON string): \"))\n",
+        "  os.environ['CREDS'] = json.dumps(CREDS)\n",
+        "  CREDS = json.loads(os.getenv('CREDS'))"
       ],
       "metadata": {
-        "id": "K_sEe-A1S56l"
+        "id": "IWrCvpKaENeu"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,35 +77,6 @@
       "source": [
         "!pip install langchain langchainhub langchain_experimental google-search-results wikipedia openai gradio -q\n",
         "%load_ext gradio"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import json\n",
-        "import os\n",
-        "from getpass import getpass\n",
-        "if IN_NOTEBOOK:\n",
-        "  CREDS = json.loads(getpass(\"Secrets (JSON string): \"))\n",
-        "  os.environ['CREDS'] = json.dumps(CREDS)\n",
-        "  CREDS = json.loads(os.getenv('CREDS'))"
-      ],
-      "metadata": {
-        "id": "IWrCvpKaENeu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d77f4e11-e46e-4b09-c8e2-c9802d630904"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Secrets (JSON string): ··········\n"
-          ]
-        }
       ]
     },
     {
@@ -131,7 +109,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +216,6 @@
         "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
         "\n",
         "tools = [calc_tool]\n",
-        "tools_dict = {\"calculate_insurance_premium\": calc_tool} # only needed if used in \"Manual loop for agent_executor\"\n",
         "\n",
         "llm_with_tools = llm.bind(\n",
         "    functions=[format_tool_to_openai_function(t) for t in tools]\n",
@@ -260,7 +237,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +359,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "print(textwrap.fill(str(response[\"input\"]), 80))\n",
         "print()\n",
         "print(textwrap.fill(str(response[\"output\"]), 80))\n",
@@ -502,11 +478,11 @@
     {
       "cell_type": "code",
       "source": [
-        "agent.run(\"hi\")\n",
-        "agent.run(\"My name is Bob\")\n",
-        "agent.run(\"Wie lautet mein Name?\")\n",
+        "#agent.run(\"hi\")\n",
+        "#agent.run(\"My name is Bob\")\n",
+        "#agent.run(\"Wie lautet mein Name?\")\n",
         "agent.run(\"Give me the premium for an insured sum of 10000000.\")\n",
-        "agent.run(\"it is metal construction industry\")"
+        "#agent.run(\"it is metal construction industry\")"
       ],
       "metadata": {
         "id": "lKxJyc-CskpC"
@@ -517,10 +493,166 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Manual loop for agent_executor\n",
+        "\n",
+        "see https://levelup.gitconnected.com/building-a-powerful-agent-has-no-challenge-today-774e27be818d"
+      ],
+      "metadata": {
+        "id": "CS2Q0VjjxpIR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Manual loop for single prompt (no memory)"
+      ],
+      "metadata": {
+        "id": "bDrV8KoYN2s-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Uses Tools of Agent 2: \"Calculate insurance premium\"\n",
+        "\n",
+        "tools_dict = {\"calculate_insurance_premium\": calc_tool} # only needed if used in \"Manual loop for agent_executor\"\n",
+        "\n",
+        "prompt = ChatPromptTemplate.from_messages([\n",
+        "    (\"system\", \"You are a useful assistant.\"),\n",
+        "    (\"user\", \"{input}\"),\n",
+        "    MessagesPlaceholder(variable_name=\"agent_scratchpad\"),\n",
+        "])\n",
+        "\n",
+        "agent = {\n",
+        "    \"input\": lambda x: x[\"input\"],\n",
+        "    \"agent_scratchpad\": lambda x: format_to_openai_functions(x['intermediate_steps'])\n",
+        "} | prompt | llm_with_tools | OpenAIFunctionsAgentOutputParser()\n",
+        "\n",
+        "langchain.debug = False\n",
+        "\n",
+        "prompt_text = \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000, die Branche ist Metallbau.\"\n",
+        "\n",
+        "intermediate_steps = []\n",
+        "while True:\n",
+        "    output = agent.invoke({\n",
+        "        \"input\": prompt_text,\n",
+        "        \"intermediate_steps\": intermediate_steps\n",
+        "    })\n",
+        "    if isinstance(output, AgentFinish):\n",
+        "        final_result = output.return_values[\"output\"]\n",
+        "        break\n",
+        "    else:\n",
+        "        print(output.tool, output.tool_input)\n",
+        "        tool = tools_dict[output.tool]\n",
+        "        observation = tool.run(output.tool_input)\n",
+        "        intermediate_steps.append((output, observation))\n",
+        "\n",
+        "print(final_result)"
+      ],
+      "metadata": {
+        "id": "1nLQtsZ_-cRw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Manual loop for chat - with memory"
+      ],
+      "metadata": {
+        "id": "22PGW3gc_XJE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Uses Tools of Agent 2: \"Calculate insurance premium\"\n",
+        "\n",
+        "tools_dict = {\"calculate_insurance_premium\": calc_tool}\n",
+        "\n",
+        "prompt = ChatPromptTemplate.from_messages([\n",
+        "    (\"system\", \"You are a useful assistant.\"),\n",
+        "    MessagesPlaceholder(variable_name='chat_history'),\n",
+        "    (\"user\", \"{input}\"),\n",
+        "    MessagesPlaceholder(variable_name=\"agent_scratchpad\"),\n",
+        "])\n",
+        "\n",
+        "agent = {\n",
+        "    \"input\": lambda x: x[\"input\"],\n",
+        "    \"agent_scratchpad\": lambda x: format_to_openai_functions(x['intermediate_steps']),\n",
+        "    \"chat_history\": lambda x: x[\"chat_history\"]\n",
+        "} | prompt | llm_with_tools | OpenAIFunctionsAgentOutputParser()\n",
+        "\n",
+        "langchain.debug = False\n",
+        "\n",
+        "intermediate_steps = []\n",
+        "chat_history = []\n",
+        "\n",
+        "prompt_text = \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\"\n",
+        "\n",
+        "while True:\n",
+        "    output = agent.invoke({\n",
+        "        \"input\": prompt_text,\n",
+        "        \"intermediate_steps\": intermediate_steps,\n",
+        "        \"chat_history\": chat_history\n",
+        "    })\n",
+        "    if isinstance(output, AgentFinish):\n",
+        "        final_result = output.return_values[\"output\"]\n",
+        "        chat_history.append(HumanMessage(content=(prompt_text)))\n",
+        "        chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
+        "        break\n",
+        "    else:\n",
+        "        print(output.tool, output.tool_input)\n",
+        "        tool = tools_dict[output.tool]\n",
+        "        observation = tool.run(output.tool_input)\n",
+        "        intermediate_steps.append((output, observation))\n",
+        "\n",
+        "print(final_result)"
+      ],
+      "metadata": {
+        "id": "kBP6IHULEJ2P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt_text = \"Die Branche ist Metallbau\"\n",
+        "\n",
+        "while True:\n",
+        "    output = agent.invoke({\n",
+        "        \"input\": prompt_text,\n",
+        "        \"intermediate_steps\": intermediate_steps,\n",
+        "        \"chat_history\": chat_history\n",
+        "    })\n",
+        "    if isinstance(output, AgentFinish):\n",
+        "        final_result = output.return_values[\"output\"]\n",
+        "        chat_history.append(HumanMessage(content=(prompt_text)))\n",
+        "        chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
+        "        break\n",
+        "    else:\n",
+        "        print(output.tool, output.tool_input)\n",
+        "        tool = tools_dict[output.tool]\n",
+        "        observation = tool.run(output.tool_input)\n",
+        "        intermediate_steps.append((output, observation))\n",
+        "\n",
+        "print(final_result)"
+      ],
+      "metadata": {
+        "id": "AgvkWyCvnOPS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Work in progress..."
       ],
       "metadata": {
-        "id": "ZQ02m2ARb8cO"
+        "id": "dtiiJYiA-Qq6"
       }
     },
     {
@@ -530,7 +662,7 @@
         "llm = ChatOpenAI(temperature=0, model='gpt-4-0613')"
       ],
       "metadata": {
-        "id": "Zs1dGiVGcmtD"
+        "id": "-oqzdaZp-XCc"
       },
       "execution_count": null,
       "outputs": []
@@ -593,193 +725,6 @@
       ],
       "metadata": {
         "id": "dF2g6iTCdM0P"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Manual loop for agent_executor"
-      ],
-      "metadata": {
-        "id": "CS2Q0VjjxpIR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Test 1\n",
-        "\n",
-        "Works only for single prompt - no memory!"
-      ],
-      "metadata": {
-        "id": "bDrV8KoYN2s-"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# see https://levelup.gitconnected.com/building-a-powerful-agent-has-no-challenge-today-774e27be818d\n",
-        "\n",
-        "# only for single prompt - no memory !\n",
-        "\n",
-        "def calculate_insurance_premium(insured_sum: int, industry: str) -> float:\n",
-        "    \"\"\"Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\"\"\"\n",
-        "    premium = insured_sum*0.25\n",
-        "    return premium\n",
-        "\n",
-        "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
-        "\n",
-        "tools = [calc_tool]\n",
-        "tools_dict = {\"calculate_insurance_premium\": calc_tool}\n",
-        "\n",
-        "llm_with_tools = llm.bind(\n",
-        "    functions=[format_tool_to_openai_function(t) for t in tools]\n",
-        ")\n",
-        "\n",
-        "prompt = ChatPromptTemplate.from_messages([\n",
-        "    (\"system\", \"You are a useful assistant.\"),\n",
-        "    (\"user\", \"{input}\"),\n",
-        "    MessagesPlaceholder(variable_name=\"agent_scratchpad\"),\n",
-        "])\n",
-        "\n",
-        "agent = {\n",
-        "    \"input\": lambda x: x[\"input\"],\n",
-        "    \"agent_scratchpad\": lambda x: format_to_openai_functions(x['intermediate_steps'])\n",
-        "} | prompt | llm_with_tools | OpenAIFunctionsAgentOutputParser()\n",
-        "\n",
-        "langchain.debug = False\n",
-        "\n",
-        "intermediate_steps = []\n",
-        "while True:\n",
-        "    output = agent.invoke({\n",
-        "        \"input\": \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000, die Branche ist Metallbau.\",\n",
-        "        \"intermediate_steps\": intermediate_steps\n",
-        "    })\n",
-        "    if isinstance(output, AgentFinish):\n",
-        "        final_result = output.return_values[\"output\"]\n",
-        "        break\n",
-        "    else:\n",
-        "        print(output.tool, output.tool_input)\n",
-        "        #tool = {\n",
-        "        #    \"get_word_length\": get_word_length\n",
-        "        #}[output.tool]\n",
-        "        tool = tools_dict[output.tool]\n",
-        "        observation = tool.run(output.tool_input)\n",
-        "        intermediate_steps.append((output, observation))\n",
-        "\n",
-        "print(final_result)"
-      ],
-      "metadata": {
-        "id": "Wq3KyyEI-bYO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Test 2\n",
-        "\n",
-        "with memory"
-      ],
-      "metadata": {
-        "id": "dAsubqpZN9i8"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def calculate_insurance_premium(insured_sum: int, industry: str) -> float:\n",
-        "    \"\"\"Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.\"\"\"\n",
-        "    premium = insured_sum*0.25\n",
-        "    return premium\n",
-        "\n",
-        "calc_tool = StructuredTool.from_function(calculate_insurance_premium, return_direct=False)\n",
-        "\n",
-        "tools = [calc_tool]\n",
-        "tools_dict = {\"calculate_insurance_premium\": calc_tool}\n",
-        "\n",
-        "llm_with_tools = llm.bind(\n",
-        "    functions=[format_tool_to_openai_function(t) for t in tools]\n",
-        ")\n",
-        "\n",
-        "prompt = ChatPromptTemplate.from_messages([\n",
-        "    (\"system\", \"You are a useful assistant.\"),\n",
-        "    MessagesPlaceholder(variable_name='chat_history'),\n",
-        "    (\"user\", \"{input}\"),\n",
-        "    MessagesPlaceholder(variable_name=\"agent_scratchpad\"),\n",
-        "])\n",
-        "\n",
-        "agent = {\n",
-        "    \"input\": lambda x: x[\"input\"],\n",
-        "    \"agent_scratchpad\": lambda x: format_to_openai_functions(x['intermediate_steps']),\n",
-        "    \"chat_history\": lambda x: x[\"chat_history\"]\n",
-        "} | prompt | llm_with_tools | OpenAIFunctionsAgentOutputParser()\n",
-        "\n",
-        "memory = \"\"\n",
-        "\n",
-        "langchain.debug = False\n",
-        "\n",
-        "intermediate_steps = []\n",
-        "chat_history = []\n",
-        "\n",
-        "myprompt = \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\"\n",
-        "\n",
-        "while True:\n",
-        "    output = agent.invoke({\n",
-        "        \"input\": myprompt,\n",
-        "        \"intermediate_steps\": intermediate_steps,\n",
-        "        \"chat_history\": chat_history\n",
-        "    })\n",
-        "    if isinstance(output, AgentFinish):\n",
-        "        final_result = output.return_values[\"output\"]\n",
-        "        chat_history.append(HumanMessage(content=(myprompt)))\n",
-        "        chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
-        "        break\n",
-        "    else:\n",
-        "        print(output.tool, output.tool_input)\n",
-        "        print(output)\n",
-        "        tool = tools_dict[output.tool]\n",
-        "        observation = tool.run(output.tool_input)\n",
-        "        intermediate_steps.append((output, observation))\n",
-        "\n",
-        "print(final_result)"
-      ],
-      "metadata": {
-        "id": "kBP6IHULEJ2P"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "myprompt = \"Die Branche ist Metallbau\"\n",
-        "\n",
-        "while True:\n",
-        "    output = agent.invoke({\n",
-        "        \"input\": myprompt,\n",
-        "        \"intermediate_steps\": intermediate_steps,\n",
-        "        \"chat_history\": chat_history\n",
-        "    })\n",
-        "    if isinstance(output, AgentFinish):\n",
-        "        final_result = output.return_values[\"output\"]\n",
-        "        chat_history.append(HumanMessage(content=(myprompt)))\n",
-        "        chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
-        "        break\n",
-        "    else:\n",
-        "        print(output.tool, output.tool_input)\n",
-        "        print(output)\n",
-        "        tool = tools_dict[output.tool]\n",
-        "        observation = tool.run(output.tool_input)\n",
-        "        intermediate_steps.append((output, observation))\n",
-        "\n",
-        "print(final_result)"
-      ],
-      "metadata": {
-        "id": "AgvkWyCvnOPS"
       },
       "execution_count": null,
       "outputs": []
