--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtjYm/P2NsLGeS/WTmPVBR",
+      "authorship_tag": "ABX9TyOjrpqRsM1Zhld8YDfaaiVM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "vAzSbqz7_0_U"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -493,7 +493,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Manual loop for agent_executor\n",
+        "# Manual loop, instead of AgentExecutor\n",
         "\n",
         "see https://levelup.gitconnected.com/building-a-powerful-agent-has-no-challenge-today-774e27be818d"
       ],
@@ -533,6 +533,8 @@
         "prompt_text = \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000, die Branche ist Metallbau.\"\n",
         "\n",
         "intermediate_steps = []\n",
+        "\n",
+        "# manual loop / like AgentExecutor\n",
         "while True:\n",
         "    output = agent.invoke({\n",
         "        \"input\": prompt_text,\n",
@@ -589,62 +591,71 @@
         "intermediate_steps = []\n",
         "chat_history = []\n",
         "\n",
-        "prompt_text = \"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\"\n",
+        "# manual loop / like AgentExecutor\n",
+        "def chat_manual_loop(prompt_text: str) -> str:\n",
+        "  while True:\n",
+        "      output = agent.invoke({\n",
+        "          \"input\": prompt_text,\n",
+        "          \"intermediate_steps\": intermediate_steps,\n",
+        "          \"chat_history\": chat_history\n",
+        "      })\n",
+        "      if isinstance(output, AgentFinish):\n",
+        "          final_result = output.return_values[\"output\"]\n",
+        "          chat_history.append(HumanMessage(content=(prompt_text)))\n",
+        "          chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
+        "          break\n",
+        "      else:\n",
+        "          print(output.tool, output.tool_input)\n",
+        "          tool = tools_dict[output.tool]\n",
+        "          observation = tool.run(output.tool_input)\n",
+        "          intermediate_steps.append((output, observation))\n",
+        "  return final_result\n",
         "\n",
-        "while True:\n",
-        "    output = agent.invoke({\n",
-        "        \"input\": prompt_text,\n",
-        "        \"intermediate_steps\": intermediate_steps,\n",
-        "        \"chat_history\": chat_history\n",
-        "    })\n",
-        "    if isinstance(output, AgentFinish):\n",
-        "        final_result = output.return_values[\"output\"]\n",
-        "        chat_history.append(HumanMessage(content=(prompt_text)))\n",
-        "        chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
-        "        break\n",
-        "    else:\n",
-        "        print(output.tool, output.tool_input)\n",
-        "        tool = tools_dict[output.tool]\n",
-        "        observation = tool.run(output.tool_input)\n",
-        "        intermediate_steps.append((output, observation))\n",
-        "\n",
-        "print(final_result)"
+        "chat_response = chat_manual_loop(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000\")\n",
+        "print(chat_response)"
       ],
       "metadata": {
-        "id": "kBP6IHULEJ2P"
+        "id": "kBP6IHULEJ2P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7028accb-63ad-417c-c9f8-6af2ecbf1163"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Um die Versicherungsprämie zu berechnen, benötige ich noch Informationen über die Branche des Kunden. Könnten Sie mir diese bitte mitteilen?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "prompt_text = \"Die Branche ist Metallbau\"\n",
-        "\n",
-        "while True:\n",
-        "    output = agent.invoke({\n",
-        "        \"input\": prompt_text,\n",
-        "        \"intermediate_steps\": intermediate_steps,\n",
-        "        \"chat_history\": chat_history\n",
-        "    })\n",
-        "    if isinstance(output, AgentFinish):\n",
-        "        final_result = output.return_values[\"output\"]\n",
-        "        chat_history.append(HumanMessage(content=(prompt_text)))\n",
-        "        chat_history.append(AIMessage(content=(output.return_values[\"output\"])))\n",
-        "        break\n",
-        "    else:\n",
-        "        print(output.tool, output.tool_input)\n",
-        "        tool = tools_dict[output.tool]\n",
-        "        observation = tool.run(output.tool_input)\n",
-        "        intermediate_steps.append((output, observation))\n",
-        "\n",
-        "print(final_result)"
+        "chat_response = chat_manual_loop(\"Die Branche ist Gastronomie\")\n",
+        "print(chat_response)"
       ],
       "metadata": {
-        "id": "AgvkWyCvnOPS"
+        "id": "PGv6fJuACjO-",
+        "outputId": "ba9be79a-cdf2-4e9b-d0a4-2a29923cf318",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "calculate_insurance_premium {'insured_sum': 10000000, 'industry': 'Gastronomie'}\n",
+            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 in der Gastronomiebranche beträgt 2.500.000,00 Euro.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
