--- a/simpleaichat.ipynb
+++ b/simpleaichat.ipynb
@@ -11,9 +11,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Readme\n"
+      ],
+      "metadata": {
+        "id": "P9CC4evCPP5m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Setup\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1fpxqExZPS14"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!pip install -q simpleaichat"
+        "import psutil\n",
+        "IN_NOTEBOOK = any([\"jupyter-notebook\" in i for i in psutil.Process().parent().cmdline()])"
+      ],
+      "metadata": {
+        "id": "GLHZ3nhhO96J"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install simpleaichat -q"
       ],
       "metadata": {
         "id": "Ch7s6QJUx4CX"
@@ -24,13 +55,51 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install \"pydantic>=2.0\" \"fire>=0.3.0\" \"httpx>=0.24.1\" \"python-dotenv>=1.0.0\" \"orjson>=3.9.0\" \"rich>=13.4.1\" \"python-dateutil>=2.8.2\""
+        "!pip install \"pydantic>=2.0\" \"fire>=0.3.0\" \"httpx>=0.24.1\" \"python-dotenv>=1.0.0\" \"orjson>=3.9.0\" \"rich>=13.4.1\" \"python-dateutil>=2.8.2\" -q"
       ],
       "metadata": {
         "id": "g9YiDAFONffJ"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "import os\n",
+        "from getpass import getpass\n",
+        "if IN_NOTEBOOK:\n",
+        "  CREDS = json.loads(getpass(\"Secrets (JSON string): \"))\n",
+        "  os.environ['CREDS'] = json.dumps(CREDS)\n",
+        "  CREDS = json.loads(os.getenv('CREDS'))"
+      ],
+      "metadata": {
+        "id": "nMFExnIMPC4W",
+        "outputId": "34db4636-5948-4e5d-c3c3-51ffe152bf98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Secrets (JSON string): ··········\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# simpleaichat - Full source"
+      ],
+      "metadata": {
+        "id": "a0bC-pAlPY6D"
+      }
     },
     {
       "cell_type": "code",
@@ -1055,39 +1124,34 @@
         "            self.delete_session(sess.id)"
       ],
       "metadata": {
-        "id": "mp-PVysKB7HF"
+        "id": "mp-PVysKB7HF",
+        "cellView": "form"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#from simpleaichat import AIChat\n",
-        "#from simpleaichat.utils import wikipedia_search, wikipedia_search_lookup"
+        "# Main app"
       ],
       "metadata": {
-        "id": "-kemVh-wMfwO"
-      },
-      "execution_count": 12,
-      "outputs": []
+        "id": "1kYFGsonPeTl"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "ai_key = \"sk-\" # web\n",
-        "#with open(\".env\", \"w\") as f:\n",
-        "#    f.write(\"OPENAI_API_KEY = \" + ai_key)\n",
-        "import os\n",
+        "ai_key = CREDS['OpenAI']['v2']['credential']\n",
         "os.environ['OPENAI_API_KEY'] = ai_key\n",
         "\n",
-        "#from simpleaichat import AIChat\n",
-        "#from simpleaichat.utils import wikipedia_search, wikipedia_search_lookup"
+        "# from simpleaichat import AIChat\n",
+        "# from simpleaichat.utils import wikipedia_search, wikipedia_search_lookup"
       ],
       "metadata": {
         "id": "xWhGwpn909cI"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -1097,32 +1161,10 @@
         "AIChat(model=\"gpt-3.5-turbo\") # \"gpt-4\""
       ],
       "metadata": {
-        "id": "HyKzxWKHyMfJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "283e5d76-45ca-41d5-a534-7c72d68bcd9e"
+        "id": "HyKzxWKHyMfJ"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ChatGPT: Hello! How can I assist you today?DEBUG: add_messages\n",
-            "\n",
-            "You: "
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1158,42 +1200,13 @@
       ],
       "metadata": {
         "id": "6uLPVjAa2qms",
-        "outputId": "39f244e4-18e0-41b3-c768-9b9f5d24867b",
+        "outputId": "fb801117-ce19-4958-e82d-874c27b510b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 7,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "DEBUG: add_messages\n",
-            "user: \n",
-            "{'role': 'user', 'content': 'Touristenattraktionen in Köln', 'received_at': datetime.datetime(2023, 9, 22, 18, 33, 28, 694458, tzinfo=datetime.timezone.utc)}\n",
-            "assistant: \n",
-            "{'role': 'assistant', 'content': '1', 'received_at': datetime.datetime(2023, 9, 22, 18, 33, 29, 279345, tzinfo=datetime.timezone.utc), 'finish_reason': 'length', 'prompt_length': 73, 'completion_length': 1, 'total_length': 74}\n",
-            "\n",
-            "DEBUG: gen()\n",
-            "1\n",
-            "\n",
-            "DEBUG: add_messages\n",
-            "user: \n",
-            "{'role': 'user', 'content': 'Context: \\n\\nUser: Touristenattraktionen in Köln', 'received_at': datetime.datetime(2023, 9, 22, 18, 33, 29, 606985, tzinfo=datetime.timezone.utc)}\n",
-            "assistant: \n",
-            "{'role': 'assistant', 'content': 'Assistant: In Köln gibt es viele Touristenattraktionen, die Sie besuchen können. Eine der bekanntesten Sehenswürdigkeiten ist der Kölner Dom. Dieses beeindruckende gotische Bauwerk ist nicht nur das Wahrzeichen der Stadt, sondern auch eine der größten Kathedralen der Welt. Sie können den Dom besichtigen und sogar den Turm besteigen, um einen atemberaubenden Blick über die Stadt zu genießen', 'received_at': datetime.datetime(2023, 9, 22, 18, 33, 34, 800317, tzinfo=datetime.timezone.utc), 'finish_reason': 'length', 'prompt_length': 41, 'completion_length': 100, 'total_length': 141}\n",
-            "\n",
-            "DEBUG: gen()\n",
-            "Assistant: In Köln gibt es viele Touristenattraktionen, die Sie besuchen können. Eine der bekanntesten Sehenswürdigkeiten ist der Kölner Dom. Dieses beeindruckende gotische Bauwerk ist nicht nur das Wahrzeichen der Stadt, sondern auch eine der größten Kathedralen der Welt. Sie können den Dom besichtigen und sogar den Turm besteigen, um einen atemberaubenden Blick über die Stadt zu genießen\n",
-            "\n",
-            "DEBUG: add_messages\n",
-            "user: \n",
-            "{'role': 'user', 'content': 'Touristenattraktionen in Köln', 'received_at': datetime.datetime(2023, 9, 22, 18, 33, 34, 801384, tzinfo=datetime.timezone.utc)}\n",
-            "assistant: \n",
-            "{'role': 'assistant', 'content': 'Assistant: In Köln gibt es viele Touristenattraktionen, die Sie besuchen können. Eine der bekanntesten Sehenswürdigkeiten ist der Kölner Dom. Dieses beeindruckende gotische Bauwerk ist nicht nur das Wahrzeichen der Stadt, sondern auch eine der größten Kathedralen der Welt. Sie können den Dom besichtigen und sogar den Turm besteigen, um einen atemberaubenden Blick über die Stadt zu genießen', 'received_at': datetime.datetime(2023, 9, 22, 18, 33, 34, 801396, tzinfo=datetime.timezone.utc)}\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -1205,7 +1218,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 7
         }
       ]
     },
@@ -1276,23 +1289,40 @@
         "    #return {\"context\": result, \"titles\": result}\n",
         "    return result\n",
         "\n",
-        "params = {\"temperature\": 0.0, \"max_tokens\": 100}\n",
-        "ai = AIChat(params=params, console=False)\n",
+        "#params = {\"temperature\": 0.0, \"max_tokens\": 100}\n",
+        "#ai = AIChat(params=params, console=False)\n",
         "\n",
         "#ai(\"Fussballvereine in Düsseldorf\", tools=[search, lookup, summarizer, calculator])\n",
         "ai(\"Fasse den folgenden Text zusammen: Hallo Welt Lorem Ipsum.\", tools=[search, lookup, summarizer, calculator])"
       ],
       "metadata": {
-        "id": "9KY74z0NJZLR"
+        "id": "9KY74z0NJZLR",
+        "outputId": "1b022c07-8e0c-4a85-eb00-b0fed29ed0a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'context': 'jung und wild.',\n",
+              " 'tool': 'summarizer',\n",
+              " 'response': 'Context: jung und wild.\\n\\nAssistant: Der Text \"Hallo Welt Lorem Ipsum\" ist ein Beispieltext, der häufig in der Gestaltung und Entwicklung von Websites verwendet wird. Er hat keine spezifische Bedeutung, sondern dient lediglich als Platzhalter für den eigentlichen Inhalt.'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqDjzL2NpI13tLIdTy6K20",
+      "authorship_tag": "ABX9TyPMKIDUS3iixV9AfqiIsNoZ",
       "include_colab_link": true
     },
     "kernelspec": {
