--- a/Langchain-Agent.ipynb
+++ b/Langchain-Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjrpqRsM1Zhld8YDfaaiVM",
+      "authorship_tag": "ABX9TyPtQ37lVirFCQgGIpm72SFY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Langchain Agent\n",
+        "# Langchain Agent using OpenAI functions\n",
         "\n",
-        "1. Run cells \"Setup for all agents and apps\"\n",
-        "2. Run one of the Agent sections / cells\n",
-        "3. Run Gradio app or CLI apps\n"
+        "Different agents and code implementations how to run Langchain agents using OpenAI functions: Single prompt, chat with memory, from command line or in Gradio web app, using AgentExecutor or your own custom loop.\n",
+        "\n",
+        "## How to use\n",
+        "1. Run all cells of group \"Basic setup for all agents, tools and apps\"\n",
+        "2. Run one of the two agent/tool groups\n",
+        "3. Run different code implementations after that: CLI, Gradio, custom loops...\n",
+        "\n",
+        "For more information see https://levelup.gitconnected.com/building-a-powerful-agent-has-no-challenge-today-774e27be818d"
       ],
       "metadata": {
         "id": "_yJpe7D-EXzF"
@@ -42,7 +47,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Setup for all agents and apps"
+        "# Basic setup for all agents, tools and apps"
       ],
       "metadata": {
         "id": "gOMfnUf3_oTj"
@@ -639,11 +644,11 @@
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "PGv6fJuACjO-",
-        "outputId": "ba9be79a-cdf2-4e9b-d0a4-2a29923cf318",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PGv6fJuACjO-",
+        "outputId": "ba9be79a-cdf2-4e9b-d0a4-2a29923cf318"
       },
       "execution_count": 9,
       "outputs": [
